--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,13 +2,22 @@ cmake_minimum_required(VERSION 3.5)
 
 project(Monitoring_System)
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 14)
+
+find_package(Qt5Widgets REQUIRED)
 
 set(SOURCES
     main.cpp
+    Autorization.cpp
 )
 
-add_executable(${PROJECT_NAME} ${SOURCES})
+set(HEADERS
+    Autorization.h
+    Menu.h
+)
 
-find_package(Qt5Widgets REQUIRED)
-target_link_libraries(${PROJECT_NAME} Qt5::Widgets)
+qt5_wrap_cpp(MOC_SOURCES ${HEADERS})
+
+add_executable(Monitoring_System ${SOURCES} ${MOC_SOURCES})
+
+target_link_libraries(Monitoring_System Qt5::Widgets)
