Window_Network_Action

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(Monitoring_System)
 
 set(CMAKE_CXX_STANDARD 14)
 
-find_package(Qt5Widgets REQUIRED)
+find_package(Qt5 COMPONENTS Core Network Widgets REQUIRED)
 
 set(SOURCES
     main.cpp
@@ -23,4 +23,4 @@ qt5_wrap_cpp(MOC_SOURCES ${HEADERS})
 
 add_executable(Monitoring_System ${SOURCES} ${MOC_SOURCES})
 
-target_link_libraries(Monitoring_System Qt5::Widgets)
+target_link_libraries(Monitoring_System Qt5::Core Qt5::Network Qt5::Widgets)
